<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.flinkinfo.monitordata</groupId>
    <artifactId>monitordata</artifactId>
    <version>1.0</version>
    <packaging>jar</packaging>

    <name>monitordata</name>
    <url>http://maven.apache.org</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- version -->
        <version.spring>4.2.4.RELEASE</version.spring>
        <version.dubbo>2.8.4</version.dubbo>
        <version.zookeeper>3.4.7</version.zookeeper>
        <version.zkclient>0.1</version.zkclient>
        <version.aspectj>1.8.7</version.aspectj>
        <version.log4j>1.2.17</version.log4j>
        <version.slf4j>1.7.13</version.slf4j>
    </properties>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>3.8.1</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.linuxense</groupId>
            <artifactId>javadbf</artifactId>
            <version>0.4.0</version>
        </dependency>

        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>5.1.38</version>
        </dependency>

        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.4</version>
        </dependency>

        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>${version.log4j}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${version.slf4j}</version>
        </dependency>

        <!--spring相关包-->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>4.0.4.RELEASE</version>
        </dependency>


        <dependency>
            <groupId>commons-dbcp</groupId>
            <artifactId>commons-dbcp</artifactId>
            <version>1.4</version>
        </dependency>
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>fastjson</artifactId>
            <version>1.2.4</version>
        </dependency>

        <!--网络请求-->
        <dependency>
            <groupId>com.squareup.okhttp</groupId>
            <artifactId>okhttp</artifactId>
            <version>2.7.5</version>
        </dependency>
    </dependencies>

    <build>
        <finalName>container</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>appassembler-maven-plugin</artifactId>
                <version>1.1.1</version>
                <configuration>
                    <repositoryLayout>flat</repositoryLayout>
                    <repositoryName>lib</repositoryName>
                    <configurationSourceDirectory>src/main/resources</configurationSourceDirectory>
                    <!-- 设置目标配置目录中使用本脚本 -->
                    <configurationDirectory>conf</configurationDirectory>
                    <!-- 　复制内容从“/src/main/resources”到目标配置
                    　　                      在组装应用程序的目录 -->
                    <copyConfigurationDirectory>true</copyConfigurationDirectory>
                    <!-- 在本脚本声明类,包括目标配置目录开始的-->
                    <includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
                    <assembleDirectory>${project.build.directory}/server</assembleDirectory>
                    <!-- Extra JVM arguments that will be included in the bin scripts -->
                    <extraJvmArguments>-Xms768m -Xmx768m -XX:PermSize=128m
                        -XX:MaxPermSize=256m -XX:NewSize=192m -XX:MaxNewSize=384m
                    </extraJvmArguments>
                    <!-- Generate bin scripts for windows and unix pr default -->
                    <platforms>
                        <platform>windows</platform>
                        <platform>unix</platform>
                    </platforms>
                    <programs>
                        <program>
                            <mainClass>com.flinkinfo.monitordata.main.App</mainClass>
                            <name>startup</name>
                        </program>
                    </programs>
                </configuration>
            </plugin>
        </plugins>
    </build>


</project>
